# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
