[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
config = "0.12.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
env_logger = "0.9.0"
log = "0.4.16"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.10"
tokio = "1"
